--- a/arch/arm/boot/dts/omap5.dtsi
+++ b/arch/arm/boot/dts/omap5.dtsi
@@ -188,6 +188,13 @@
 			ti,hwmods = "i2c1";
 		};
 
+		i2c5: i2c@4807c000 {
+			compatible = "ti,omap4-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			ti,hwmods = "i2c5";
+		};
+
 		aess: aess@0x401f1000 {
 			compatible = "ti,omap4-aess";
 			reg = <0x401f1000 0x3ff>, /* MPU private access */
