ARM/DTS: Add IO expander at I25 in OMAP5
Signed-off-by: Ricardo Neri <ricardo.neri@ti.com>

--- a/arch/arm/boot/dts/omap5-evm.dts
+++ b/arch/arm/boot/dts/omap5-evm.dts
@@ -128,5 +128,12 @@
 	};
 };
 
+&i2c5 {
+	tca: tca@22 {
+		reg = <0x22>;
+	};
+};
+
 /include/ "palmas.dtsi"
 /include/ "twl6040.dtsi"
+/include/ "tca6424a.dtsi"
