OMAPDSS:HDMI:OMAP5: Update dependencies and selections of the driver
Make OMAP5 HDMI support select PCA953X to use the IO expander in the
sEVM baord, the PALMAS_REGULATOR to obtain the vdda_hdmi and
PINCTRL_SINGLE to configure the pinmux for GPIOs.

Signed-off-by: Ricardo Neri <ricardo.neri@ti.com>

--- a/drivers/video/omap2/dss/Kconfig
+++ b/drivers/video/omap2/dss/Kconfig
@@ -78,8 +78,11 @@ config OMAP5_DSS_HDMI_AUDIO
 
 config OMAP5_DSS_HDMI
 	bool "OMAP5 HDMI support"
-	depends on SOC_OMAP5
+	depends on SOC_OMAP5 && MFD_PALMAS && PINCTRL
 	default y
+	select PINCTRL_SINGLE
+	select GPIO_PCA953X
+	select REGULATOR_PALMAS
 	help
 	    HDMI Interface.This add the High Deinition Multimedia Interface.
 	    See http://wwww.hdmi.org/ for HDMI specification.
