ARM/dts: OMAP5: Add node for HDMI audio
Add a node to represent the HDMI audio. This is a temporary solution.
The ideal solution reuses the same DT hdmi node for audio and video.

Signed-off-by: Ricardo Neri <ricardo.neri@ti.com>

--- a/arch/arm/boot/dts/omap5.dtsi
+++ b/arch/arm/boot/dts/omap5.dtsi
@@ -322,6 +322,12 @@
 				vdda_hdmi_dac-supply = <&ldo7_reg>;
 				video-source = <1>;
 			};
+
+			/* TODO: Reuse the hdmi node for audio as well */
+			hdmi_audio: hdmi_audio {
+				compatible = "ti,omap4-hdmi-audio";
+				ti,hwmods = "dss_hdmi";
+			};
 		};
 	};
 };
