--- a/arch/arm/boot/dts/omap5-evm.dts
+++ b/arch/arm/boot/dts/omap5-evm.dts
@@ -69,6 +69,14 @@
 			"omap-dmic-abe.2 Capture", "Digital Mic1 Bias",
 			"Digital Mic1 Bias", "Digital Mic 2";
 	};
+
+	sound_hdmi {
+		compatible = "ti,omap-hdmi-audio";
+		ti,model = "OMAP5HDMI";
+
+		ti,hdmi_audio = <&hdmi_audio>;
+		ti,level_shifter = <&tpd12s015>;
+	};
 };
 
 &i2c1 {
@@ -154,7 +162,7 @@
 };
 
 &hdmi {
-	tpd12s015 {
+	tpd12s015: tpd12s015 {
 		compatible = "ti,tpd12s015";
 
 		gpios = <&tca 0 0>,	/* TCA6424A P01, CT_CP_HDP */
