ARM/dts: OMAP4-Panda: Add sound node for HDMI
This sound node represents the HDMI audio card.
Also, it adds a label to the level shifter so that it can be
identified in sound_hdmi.

Signed-off-by: Ricardo Neri <ricardo.neri@ti.com>

--- a/arch/arm/boot/dts/omap4-panda.dts
+++ b/arch/arm/boot/dts/omap4-panda.dts
@@ -67,6 +67,14 @@
 			"40124000.mcbsp Playback", "MM_EXT_DL",
 			"MM_EXT_UL", "40124000.mcbsp Capture";
 	};
+
+	sound_hdmi {
+		compatible = "ti,omap-hdmi-audio";
+		ti,model = "OMAP4HDMI";
+
+		ti,hdmi_audio = <&hdmi_audio>;
+		ti,level_shifter = <&tpd12s015>;
+	};
 };
 
 &i2c1 {
@@ -148,7 +156,7 @@
 };
 
 &hdmi {
-	tpd12s015 {
+	tpd12s015: tpd12s015 {
 		compatible = "ti,tpd12s015";
 
 		gpios = <&gpio2 28 0>,	/* 60, CT CP HPD */
