--- a/arch/arm/boot/dts/omap4-sdp.dts
+++ b/arch/arm/boot/dts/omap4-sdp.dts
@@ -138,7 +138,7 @@
 		compatible = "ti,omap-hdmi-audio";
 		ti,model = "OMAP4HDMI";
 
-		ti,hdmi_audio = <&hdmi_audio>;
+		ti,hdmi_audio = <&hdmi>;
 		ti,level_shifter = <&tpd12s015>;
 	};
 };
