ARM/dts: omap5-evm: Remove usage of hdmi_audio node.
To more accurately represent the hardware, sound_hdmi should use
the hdmi node rather than a separate hdmi_audio node. In the hardware,
both HDMI audio and display are provided by the same IP.

Signed-off-by: Ricardo Neri <ricardo.neri@ti.com>

--- a/arch/arm/boot/dts/omap5-evm.dts
+++ b/arch/arm/boot/dts/omap5-evm.dts
@@ -74,7 +74,7 @@
 		compatible = "ti,omap-hdmi-audio";
 		ti,model = "OMAP5HDMI";
 
-		ti,hdmi_audio = <&hdmi_audio>;
+		ti,hdmi_audio = <&hdmi>;
 		ti,level_shifter = <&tpd12s015>;
 	};
 };
